--- a/lenet5.ipynb
+++ b/lenet5.ipynb
@@ -5,7 +5,7 @@
    "id": "42ff0e47",
    "metadata": {},
    "source": [
-    "Lenet was first CNN developed by Yan LeCun, it was designed to recognize handwritten digits on bank cheque."
+    "Lenet was the first CNN developed by Yan LeCun, It was designed to recognize handwritten digits on bank cheque."
    ]
   },
   {
